--- a/jspProject1/headerEx.html
+++ b/jspProject1/headerEx.html
@@ -52,9 +52,9 @@
                 <div class="detail-box">
                   <ul class="drop-menu-1">
                     <a href="myPage.jsp"><li>회원 정보</li></a>
-                    <li>상세 2</li>
-                    <li>상세 3</li>
-                    <li>상세 4</li>
+                    <a href="myPage.jsp"><li>메뉴 1</li></a>
+                    <a href="myPage.jsp"><li>메뉴 2</li></a>
+                    <a href="myPage.jsp"><li>메뉴 3</li></a>
                   </ul>
                 </div>
               </li>
