register, login 수정

--- a/jspProject1/headerEx.html
+++ b/jspProject1/headerEx.html
@@ -68,8 +68,8 @@
                 <a href=""><img src="menu.png" alt="" class="menu-img" /></a>
                 <div class="detail-box2">
                   <ul class="drop-menu-2">
-                    <a href="login.jsp"><li>로그인</li></a>
-                    <a href="register.jsp"><li>회원가입</li></a>
+                    <a href="login.html"><li>로그인</li></a>
+                    <a href="register.html"><li>회원가입</li></a>
                   </ul>
                 </div>
               </li>
